--- a/website/projects.html
+++ b/website/projects.html
@@ -129,12 +129,13 @@
         </div>
         <br>
         <div class="projectContainer animated revealU">
-            <p class="projectTab" onclick="ocTab('#ttt')">TicTacToe (Python)<span class="flushRight">&#x25BC;</span></p>
+            <p class="projectTab" onclick="ocTab('#ttt')">TicTacToe (Python / HTML CSS JS)<span
+                    class="flushRight">&#x25BC;</span></p>
             <div id="ttt" class="project hide">
-                <h1>TicTacToe</h1> <br>
+                <h1>TicTacToe - Python version</h1> <br>
                 <b>
-                    <a href="https://github.com/jspoh/jspoh.github.io/blob/main/projects/games/tictactoe/tictactoe.py"
-                        target="_blank" class="srcCode hlink">Source code</a> <br><br>
+                    <a id="tttrepo" href="https://github.com/jspoh/tictactoe" target="_blank"
+                        class="srcCode hlink">Source code</a> <br><br>
                     To use this program, copy the code from the link above and paste it in your IDE/Code editor <br>
                     If you don't have any IDEs or Code editors for python, you will have to install python shell and
                     paste the code in notepad. Change the extension to '.py'
@@ -142,7 +143,9 @@
                 <br> <br>
                 <hr> <br>
                 This program will play the classic tictactoe game with you. It will try its best to win you or at least
-                prevent you from winning. The player may use their mouse to click on the box they'd like to select.
+                prevent you from winning. The player may use their mouse to click on the box they'd like to select. <br>
+                It is still possible to win against the AI as it will not always choose the center positioning even if
+                the player did not select it.
                 <br>
                 <br>
                 <img src="../projects/games/tictactoe/lib/main.PNG" alt="" class="curve"> <br> <br>
@@ -151,7 +154,25 @@
                 This is what gameplay looks like <br><br>
                 <img src="../projects/games/tictactoe/lib/draw.PNG" alt="" class="curve"> <br><br>
                 End game screen. It can either be win, lose, or draw. The draw result screen is shown in this case.
+                <br> <br> <br>
+                <hr>
                 <br>
+                <h1>TicTacToe - Javascript version</h1>
+                <b>
+                    Source code provided in the same github <a href="#tttrepo" class="hlink">repository</a> linked on
+                    top
+                </b>
+                <br><br>
+                I made this javascript version mainly to learn and practice writing and implementing the minimax
+                algorithm. I also did not style the page much nor did I provide a live web link for this tictactoe
+                version as I do not anticipate anyone having fun as it is impossible to win against the AI.
+                <br> <br>
+                Although it was super tedious and frustrating trying to write my own code initially, I'm glad I went
+                through it as I feel as though I've learnt quite a bit more about recursive functions and AI development
+                for games.
+                <br><br>
+                If you would like to try this game out anyways, you may download the .html, .css, and .js files in the
+                <a href="#tttrepo" class="hlink">repository</a> linked above and run the .html file in your web browser.
             </div>
         </div>
 
