--- a/website/projects.html
+++ b/website/projects.html
@@ -161,18 +161,40 @@
                 <b>
                     Source code provided in the same github <a href="#tttrepo" class="hlink">repository</a> linked on
                     top
+                    <br>
+                    You may try out the javascript version of the game <a class="hlink"
+                        href="https://jspoh.github.io/projects/games/tictactoe/tictactoe.html">here</a>!
                 </b>
                 <br><br>
+                <hr>
+                <br><br>
                 I made this javascript version mainly to learn and practice writing and implementing the minimax
-                algorithm. I also did not style the page much nor did I provide a live web link for this tictactoe
-                version as I do not anticipate anyone having fun as it is impossible to win against the AI.
+                algorithm.
                 <br> <br>
                 Although it was super tedious and frustrating trying to write my own code initially, I'm glad I went
                 through it as I feel as though I've learnt quite a bit more about recursive functions and AI development
                 for games.
                 <br><br>
-                If you would like to try this game out anyways, you may download the .html, .css, and .js files in the
-                <a href="#tttrepo" class="hlink">repository</a> linked above and run the .html file in your web browser.
+                This tictactoe version features: <br>
+                - 3 game modes to choose from<br>
+                - Unbeatable AI.<br>
+                <br>
+                Players may choose to go first, allow the AI to go first, or a PvP gamemode with friends. <br>
+                If the player chooses to go first, the game will always result in a loss/draw but if the AI goes first
+                and the player does not select the center box in his/her first turn, the AI will always win.
+                <br> <br>
+                <img src="../projects/games/tictactoe/lib/gameplayjs.PNG" alt="" class="curve">
+                <br> <br>
+                This is a player losing to the AI in the gamemode which the AI is allowed to go first.
+                <br><br>
+                <img src="../projects/games/tictactoe/lib/gameplayjs1.PNG" alt="" class="curve">
+                <br><br>
+                This is a player drawing a game with the AI after going first.
+                <br><br>
+                <img src="../projects/games/tictactoe/lib/mobilejs.PNG" alt="" class="curve">
+                <br><br>
+                This is a player winning against his friend in PvP mode on mobile.
+                <br>
             </div>
         </div>
 
