--- a/website/projects.html
+++ b/website/projects.html
@@ -162,7 +162,7 @@
                     Source code provided in the same github <a href="#tttrepo" class="hlink">repository</a> linked on
                     top
                     <br>
-                    You may try out the javascript version of the game <a class="hlink"
+                    You may try out the javascript version of the game <a class="hlink" target="_blank"
                         href="https://jspoh.github.io/projects/games/tictactoe/tictactoe.html">here</a>!
                 </b>
                 <br><br>
