--- a/website/projects.html
+++ b/website/projects.html
@@ -148,11 +148,11 @@
                 the player did not select it.
                 <br>
                 <br>
-                <img src="../projects/games/tictactoe/lib/main.PNG" alt="" class="curve"> <br> <br>
+                <img src="../projects/games/tictactoe/lib/main.PNG" alt="Game screen on launch" class="curve"> <br> <br>
                 Game screen on launch <br> <br>
-                <img src="../projects//games/tictactoe/lib/gameplay.PNG" alt="" class="curve"> <br> <br>
+                <img src="../projects//games/tictactoe/lib/gameplay.PNG" alt="gameplay" class="curve"> <br> <br>
                 This is what gameplay looks like <br><br>
-                <img src="../projects/games/tictactoe/lib/draw.PNG" alt="" class="curve"> <br><br>
+                <img src="../projects/games/tictactoe/lib/draw.PNG" alt="end game screen" class="curve"> <br><br>
                 End game screen. It can either be win, lose, or draw. The draw result screen is shown in this case.
                 <br> <br> <br>
                 <hr>
@@ -183,15 +183,19 @@
                 If the player chooses to go first, the game will always result in a loss/draw but if the AI goes first
                 and the player does not select the center box in his/her first turn, the AI will always win.
                 <br> <br>
-                <img src="../projects/games/tictactoe/lib/gameplayjs.PNG" alt="" class="curve">
+                <img src="../projects/games/tictactoe/lib/gameplayjs.PNG"
+                    alt="This is a player losing to the AI in the gamemode which the AI is allowed to go first."
+                    class="curve">
                 <br> <br>
                 This is a player losing to the AI in the gamemode which the AI is allowed to go first.
                 <br><br>
-                <img src="../projects/games/tictactoe/lib/gameplayjs1.PNG" alt="" class="curve">
+                <img src="../projects/games/tictactoe/lib/gameplayjs1.PNG"
+                    alt="This is a player drawing a game with the AI after going first." class="curve">
                 <br><br>
                 This is a player drawing a game with the AI after going first.
                 <br><br>
-                <img src="../projects/games/tictactoe/lib/mobilejs.PNG" alt="" class="curve">
+                <img src="../projects/games/tictactoe/lib/mobilejs.PNG"
+                    alt="This is a player winning against his friend in PvP mode on mobile." class="curve">
                 <br><br>
                 This is a player winning against his friend in PvP mode on mobile.
                 <br>
@@ -291,11 +295,12 @@
                     provider.
                     <br>
                     <br>
-                    <img src="../projects/practical/auto_email/lib/main.PNG" alt="" class="curve">
+                    <img src="../projects/practical/auto_email/lib/main.PNG" alt="Program image" class="curve">
                     <br><br>
                     This is what the main program will look like
                     <br> <br>
-                    <img src="../projects/practical/auto_email/lib/email.PNG" alt="" class="curve">
+                    <img src="../projects/practical/auto_email/lib/email.PNG" alt="Image of recipient mail"
+                        class="curve">
                     <br><br>
                     This is what it will look like for the recipient
                     <br>
