--- a/website/about.html
+++ b/website/about.html
@@ -59,15 +59,16 @@
     </header>
 
     <button class="btt" id="bttButton"><a href="#top">Back to top</a></button>
-    <section>
-        <div class="margin">
+    <section class="peach">
+        <br><br><br>
+        <div>
             <p><img id="intro_pic" src="../lib/js_bob.jpg" alt="A picture of JS"></p>
             <p class="left animated revealL">Poh Jing Seng<br><br>Website still under construction!</p>
         </div>
     </section>
 
     <section class="purple height relative">
-        <div class="blue_waves">
+        <div class="peach_waves">
             <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120"
                 preserveAspectRatio="none">
                 <path
