--- a/website/proficiencies.html
+++ b/website/proficiencies.html
@@ -56,7 +56,8 @@
     </header>
     <button class="btt" id="bttButton"><a href="#top">Back to top</a></button>
 
-    <div id="edu exp cert">
+    <div class="edu exp cert">
+        <br>
         <p class="info_text">Details of my Education, Work experience and Professional certifications may be found in
             my<br>
             <a class="hlink" href="resume.html">eResume</a>
