--- a/website/projects.html
+++ b/website/projects.html
@@ -337,6 +337,7 @@
                     and displays information such as: <br>
                     - Job title <br>
                     - Salary <br>
+                    - Company <br>
                     - Location <br>
                     - Job type <br>
                     - Date posted <br>
