--- a/website/projects.html
+++ b/website/projects.html
@@ -353,8 +353,9 @@
                     However, restarting the program may work but the more reliable option would be to simply
                     search for the job title in the job portal or by visiting the link provided.
                     <br> <br>
-                    jobscraper_v2.py writes all information gathered onto a .txt document for easy reference. Here's a
-                    screenshot of the output:
+                    jobscraper_v2.py writes all information gathered onto a .txt document for easy reference every x
+                    minutes as set by the user. <br>
+                    Here's a screenshot of the output:
                     <br><br>
                     <img src="../projects/practical/jobscraper/lib/result.PNG"
                         alt="Image of jobscraper_v2.py's output on a .txt file" class="curve">
