--- a/website/projects.html
+++ b/website/projects.html
@@ -360,6 +360,11 @@
                     <img src="../projects/practical/jobscraper/lib/result.PNG"
                         alt="Image of jobscraper_v2.py's output on a .txt file" class="curve">
                     <br> <br>
+                    This is what the output will look like if the user entered 'software engineering' into the program.
+                    <br>
+                    Results from different websites are separated as shown in the screenshot above.
+                    <br><br>
+                    I hope this program will be able to help you in your job search!
                 </b>
             </div>
         </div>
