--- a/website/projects.html
+++ b/website/projects.html
@@ -312,16 +312,20 @@
         <br>
         <div class="projectContainer animated revealU">
             <p class="projectTab" onclick="ocTab('#jobscraper')">
-                Jobscraper (Python)<span class="flushRight">&#x25BC;</span>
+                Jobscraper (Python / Telegram bot)<span class="flushRight">&#x25BC;</span>
             </p>
             <div id="jobscraper" class="project hide">
                 <h1>Webscraper for job searching</h1>
                 <b>
                     <a href="https://github.com/jspoh/jobscraper" target="_blank" class="srcCode hlink">Source code</a>
+                    <br>
+                    <a href="https://t.me/JobscraperSbot" class="hlink">Telegram bot</a>
                     <br> <br>
                     To use this program, copy the code from the link above and paste it in your IDE/Code editor <br>
                     If you don't have any IDEs or Code editors for python, you will have to install python shell and
                     paste the code in notepad. Change the extension to '.py'
+                    <br><br>
+                    Feel free to use the telegram bot version too!
                     <br> <br>
                     <hr> <br>
                     This program was made right after I finished my national service to help ease the pains of a job
@@ -364,7 +368,10 @@
                     <br>
                     Results from different websites are separated as shown in the screenshot above.
                     <br><br>
-                    I hope this program will be able to help you in your job search!
+                    Here is a screenshot of what the telegram bot looks like!
+                    <br><br>
+                    <img src="../projects/practical/jobscraper/lib/telebot.PNG"
+                        alt="screenshot of jobscraper in action as a telegram bot" class="curve">
                 </b>
             </div>
         </div>
