--- a/website/projects.html
+++ b/website/projects.html
@@ -254,8 +254,8 @@
             <div id="autoclicker" class="project hide">
                 <h1>Auto clicker</h1> <br>
                 <b>
-                    <a href="https://github.com/jspoh/jspoh.github.io/blob/main/projects/practical/autoclicker/autoclicker.py"
-                        target="_blank" class="srcCode hlink">Source code</a> <br><br>
+                    <a href="https://github.com/jspoh/automation/blob/main/autoclicker.py" target="_blank"
+                        class="srcCode hlink">Source code</a> <br><br>
                     To use this program, copy the code from the link above and paste it in your IDE/Code editor <br>
                     If you don't have any IDEs or Code editors for python, you will have to install python shell and
                     paste the code in notepad. Change the extension to '.py'
@@ -283,8 +283,8 @@
             <div id="autoemail" class="project hide">
                 <h1>Auto email sender</h1> <br>
                 <b>
-                    <a href="https://github.com/jspoh/jspoh.github.io/blob/main/projects/practical/auto_email/auto_email.py"
-                        target="_blank" class="srcCode hlink">Source code</a> <br> <br>
+                    <a href="https://github.com/jspoh/automation/blob/main/auto_email.py" target="_blank"
+                        class="srcCode hlink">Source code</a> <br> <br>
                     To use this program, copy the code from the link above and paste it in your IDE/Code editor <br>
                     If you don't have any IDEs or Code editors for python, you will have to install python shell and
                     paste the code in notepad. Change the extension to '.py'
@@ -368,10 +368,14 @@
                     <br>
                     Results from different websites are separated as shown in the screenshot above.
                     <br><br>
-                    Here is a screenshot of what the telegram bot looks like!
+                    Here is a screenshot of what the /search command on the telegram bot looks like!
                     <br><br>
-                    <img src="../projects/practical/jobscraper/lib/telebot.PNG"
+                    <img src="../projects/practical/jobscraper/lib/telebot_search.PNG"
                         alt="screenshot of jobscraper in action as a telegram bot" class="curve">
+                    <br><br>
+                    Here is a screenshot of /searchall command on the telegram bot!
+                    <br><br>
+                    <img src="../projects/practical/jobscraper/lib/telebot_searchall.PNG" alt="" class="curve">
                 </b>
             </div>
         </div>
