--- a/website/projects.html
+++ b/website/projects.html
@@ -319,7 +319,7 @@
                 <b>
                     <a href="https://github.com/jspoh/jobscraper" target="_blank" class="srcCode hlink">Source code</a>
                     <br>
-                    <a href="https://t.me/JobscraperSbot" class="hlink">Telegram bot</a>
+                    <a href="https://t.me/JobscraperSbot" class="hlink" target="_blank">Telegram bot</a>
                     <br> <br>
                     To use this program, copy the code from the link above and paste it in your IDE/Code editor <br>
                     If you don't have any IDEs or Code editors for python, you will have to install python shell and
